<resources>
    <string name="app_name">Private Teacher</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me?</string>
    <string name="forget_password">Forget Password?</string>
    <string name="Forget_pass">Forget Password</string>
    <string name="user_name_or_email">Email</string>
    <string name="password">Password</string>
    <string name="new_user_create_an_account">New User! </string>
    <string name="create_account">Create An Account?</string>
    <string name="create_an_account">Create An Account</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="or_signup_using">Or SignUp Using</string>
    <string name="or_login_with">Or login Using</string>
    <string name="login_instead">LogIn instead?</string>
    <string name="already_have_account">Already have account</string>
    <string name="continue_signup">Continue SignUp</string>
    <string name="manar_odeh">MaNar OdEh</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="courses">courses</string>
    <string name="signup">SignUp</string>
    <string name="input_your_email">Input your Email</string>
    <string name="_0597853325">0597853325</string>
    <string name="java_c_arabic_turkish">Java,C++,Arabic,turkish</string>
    <string name="setting">Setting</string>
    <string name="home">home</string>
    <string name="notification">Notification</string>
    <string name="favourite">Favourite</string>
    <string name="description_profile">My Name Manar Odeh,I can teach in my spare time at times that suit you. I have good programming experience and I like building stuff</string>
    <string name="request_teach_the_student">Request Teach the student</string>
    <string name="notification_example">Manar Odeh Visit Your Profile!</string>
    <string name="update_user_name">Update User Name</string>
    <string name="update_email">Update Email</string>
    <string name="update_courses">Update Courses</string>
    <string name="update_phone_number">Update Phone Number</string>
    <string name="update_password">Update Password</string>
    <string name="about_us">About Us</string>
    <string name="forget_password_message">Input your email to send you an email in order to change your password you will receive an email within 5 minutes</string>
    <string name="send">Send</string>
    <string name="reset_password_link_send">You will receive an Email within 5 minutes if you don\'t receive an email please try again</string>
    <string name="update_description">update description</string>
    <string name="notest_course">Please, Separate each course with comma \',\' to make it easy to show them when any one visit your profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile">Profile</string>
    <string name="add_new_students">Add New Students</string>
    <string name="student_user_name">Student User Name!</string>
    <string name="warning_text">Note any Student you will add here can evaluate you! and you can\'t delete student after you adding them</string>
    <string name="search">Search</string>
    <string name="search_hinit">You can Search by input user name or phone number!</string>
    <string name="search_">search..</string>
    <string name="why_you_wait_contact_him_now">Why you wait contact him now!!</string>
    <string name="contact">contact</string>
    <string name="channel_name">PRIVATETEACHERAPPS</string>
    <string name="channel_description">Show Notification when people visit your profiles or one some one send you a request </string>
    <string name="CHANNEL_ID">PRIVATE_TEACHER</string>
    <string name="profile_hint">Go To Your Profiel</string>
    <string name="add_widget_hint">Adding widget for that user</string>
    <string name="profile_images">Profile Images</string>
    <string name="evaluation_star">evaluation star</string>
    <string name="logo_images">Logo Images</string>
    <string name="java">JAVA</string>
    <string name="evaluation">Evaluation</string>
    <string name="input_a_valid_number_from_1_to_5">Input a valid number from 1 to 5</string>
    <string name="input_your_evaluation">Input your Evaluation :</string>
    <string name="submit">Submit</string>
    <string name="gallery">Gallery</string>
    <string name="take_an_image">take an image</string>
    <string name="face_book_login">face_book_login</string>
    <string name="gmail_login">gmail_login</string>
    <string name="no_internet">No Internet Logo</string>
    <string name="update">Update</string>
    <string name="techapp">TechApp</string>
    <string name="successfully_done">Successfully Done</string>
    <string name="wrong_message">Something Wrong Happen</string>
    <string name="welcome_notification">Welcome Notification</string>
    <string name="welcome_notifcation_body">Hope You Enjoy!!</string>
    <string name="weak_password">Weak password,Try Input Stronger password!</string>
    <string name="malformed_email">malformed_email!</string>
    <string name="exist_email">Exist email! The Input Email is already taken</string>
    <string name="watch_mode">Can\'t do that you are in Watch Mode!!</string>
    <string name="widget_added">Added Successfully in your Widget</string>
    <string name="succesffully_request_title">Done Notification</string>
    <string name="successfully_requet_body">Successfully you send him a request</string>
    <string name="notification_sending_request_text">Send You a request to teach you Please check his profile and call him if you accept!!</string>
    <string name="visit_profile_notifcation">visit your profile</string>
    <string name="cant_evaluate_message">You cant Evaluate That Teacher!! the teacher does not adding you</string>
    <string name="evaluated_done_before">You Already  Evaluate That Teacher!!</string>
    <string name="valid_number">Input Number Between 1 and 5 Please!!</string>
    <string name="visit_profile"> visit your profile</string>
    <string name="phone_number_error">Your Phone number must be between 6 numbers and 10 </string>
    <string name="name_error">Please, it should be at least 3 letters or digits</string>
    <string name="desc_error">your description must be at least 8 character</string>
    <string name="password_eworng">Your password should at least 6 letters with 2 Capital Letter</string>
    <string name="not_equal">Your Password not Equals</string>
    <string name="user_name_taken_before">Your name must be unique this name is already taken before!!</string>
    <string name="course_error">Input at least one courses!</string>
    <string name="email_error">"Please Input Valid Email!</string>
    <string name="password_error">Input Your Password Please!!</string>
    <string name="account_issues">You Don\'t have accounts create one instead!</string>
    <string name="updated_succesfully">Updated Successfully</string>
    <string name="valid_data">Input Valid data Please</string>
    <string name="name_wrong">Your name must al least have 3 char at the beginning</string>
    <string-array name="user_type">
        <item>Student</item>
        <item>Teacher</item>
        <item>Parents</item>
    </string-array>
</resources>
