<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="always"/>

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings"
        android:title="@string/setting"
        app:showAsAction="always"/>

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/notification"
        android:title="@string/notification"
        app:showAsAction="always"/>

    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/heart"
        android:title="@string/favourite"
        app:showAsAction="always"/>
    <item
        android:id="@+id/navigation_signOut"
        android:icon="@drawable/signoutoption"
        android:title="Sign Out"
        app:showAsAction="always"/>
</menu>