<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Activity.SplachActivity"
    android:fillViewport="true"
    android:layout_gravity="center"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="130dp"
            android:layout_height="130dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="5dp"
           >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/app_logo"
                android:contentDescription="@string/logo_images"/>
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/techapp"
            android:layout_marginBottom="25dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="cursive"
            android:textColor="@color/colorApp"
            android:textSize="18sp"
            android:padding="4dp"
            android:layout_marginTop="5dp"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="13sp"
            android:background="@drawable/rounded_btn"
            android:backgroundTint="@color/colorApp"
            android:textColor="@color/colorWhite"
            android:layout_margin="8dp"
           />
        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textSize="13sp"
            android:background="@drawable/button_border"
            android:textColor="@color/colorApp"
            android:layout_margin="8dp"
            />
        <Button
            android:id="@+id/btn_aboutUs"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:text="@string/about_us"
            android:textAllCaps="false"
            android:textSize="13sp"
            android:background="@drawable/rounded_btn"
            android:backgroundTint="@color/colorApp"
            android:textColor="@color/colorWhite"
            android:layout_margin="8dp"
            />
    </LinearLayout>

</ScrollView>