<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Fragments.ContinueSignUp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@color/colorApp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_marginTop="30dp"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@drawable/graduate"
                app:civ_border_width="1dp"
                app:civ_border_color="@color/colorApp"
                android:layout_marginLeft="25dp"
                android:contentDescription="@string/profile_images"
                />
            <ImageView
                android:id="@+id/image_upload"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/upload_photo"
                android:tint="@color/colorWhite"
                android:layout_alignBottom="@+id/profile_image"
                android:layout_toRightOf="@+id/profile_image"
                android:layout_marginLeft="-8dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:pointerIcon="hand"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/user_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manar_odeh"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="35dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_signup"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"/>
        <EditText
            android:id="@+id/user_phone_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/phone_number"
            android:maxLines="1"
            android:textSize="14sp"
            android:drawableLeft="@drawable/telephone"
            android:drawableTint="@color/colorApp"
            android:drawablePadding="15dp"
            android:inputType="number"/>
        <EditText
            android:id="@+id/address_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/address"
            android:maxLines="1"
            android:inputType="text"
            android:textSize="14sp"
            android:drawableLeft="@drawable/home_address"
            android:drawableTint="@color/colorApp"
            android:drawablePadding="15dp"/>
        <EditText
            android:id="@+id/description_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="130dp"
            android:layout_marginTop="10dp"
            android:hint="@string/description"
            android:inputType="text"
            android:textSize="14sp"
            android:drawableLeft="@drawable/hastag"
            android:drawableTint="@color/colorApp"
            android:drawablePadding="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notest_course"
            android:textColor="#cccc"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:paddingTop="8dp"
            android:textSize="15sp"
            android:layout_marginBottom="5dp"/>

        <MultiAutoCompleteTextView
            android:id="@+id/autoCompleteTv_courses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/courses"
            android:drawableLeft="@drawable/language"
            android:drawableTint="@color/colorApp"
            android:drawablePadding="15dp"
            />

        <Spinner
            android:id="@+id/user_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:entries="@array/user_type"
            android:layout_marginTop="20dp"
            android:spinnerMode="dropdown"
            android:popupElevation="3dp"
            android:background="@drawable/rounded_btn"
            android:gravity="center"
            android:layout_gravity="center"
            android:popupBackground="@color/colorWhite"
            />
        <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        />
        <Button
            android:id="@+id/signUp_btn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/signup"
            android:layout_gravity="center"
            android:background="@drawable/rounded_btn"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorApp"/>

    </LinearLayout>


</LinearLayout>