<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/Forget_pass"
            android:textSize="22sp"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:background="@color/colorApp"/>
        <androidx.cardview.widget.CardView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:elevation="3dp"
            app:cardCornerRadius="5dp"
            android:layout_marginTop="30dp"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/app_logo"
                android:scaleType="centerCrop"/>

        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/message_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password_message"
            android:layout_margin="20dp"
            android:textSize="16sp"
            android:textColor="#cccc"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/user_email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/input_your_email"
            android:maxLines="1"
            android:layout_margin="25dp"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="textEmailAddress"
            />
        <Button
            android:id="@+id/login_btn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/send"
            android:layout_gravity="center"
            android:background="@drawable/rounded_btn"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorApp"
            android:layout_marginBottom="15dp"/>

    </LinearLayout>

</LinearLayout>