<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/card_view_teacher_profile"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="4dp"
    app:cardCornerRadius="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_profile_circle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/profile"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="15dp">
                <TextView
                    android:id="@+id/user_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manar_odeh"
                    android:layout_marginTop="16dp"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/user_phone_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0597853325"
                    android:layout_marginTop="3dp"
                    android:layout_marginLeft="4dp"
                    android:textSize="13sp"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right">
                <Button
                    android:id="@+id/btn_show_profile"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:background="@drawable/rounded_btn"
                    android:backgroundTint="@color/colorApp"
                    android:text="Show Profile"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="11sp"
                    android:gravity="center"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="20dp"
                    />
            </LinearLayout>


        </LinearLayout>
            <TextView
                android:id="@+id/courses_tv"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/java_c_arabic_turkish"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="35dp"
                android:textSize="14sp"
                />
    </LinearLayout>
</androidx.cardview.widget.CardView>